Fix Dark Mode (#1315)
* Attempt to fix dark mode

* remove useless pages

* fix home page header

* fixes

* gradient

* fix toggle transition

* fix header

* update

* minor fix

* fix for good

--- a/src/components/DarkModeToggle/style.scss
+++ b/src/components/DarkModeToggle/style.scss
@@ -55,7 +55,7 @@
             content: '🌙';
             text-transform: uppercase;
             padding-left: 10px;
-            background-color: #200133;
+            background-color: #4b325a;
             color: #fff;
         }
         .toggle-switch {
